# DiskPulse

./: .gitignore  .graphifyignore  CHANGELOG.md  CLAUDE.md  CODEX.md  LICENSE  PROGRESS.md  README.md  README_zh-CN.md  development_plan.txt  graphify.toml  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.signpath/: config.yml
docs/: linux-ci.md  m1-release-readiness.md  release-notes-v0.7.0.md  signing.md  v0.2.0-plan.md  v0.3.0-plan.md  v0.4.0-plan.md  v0.5.0-plan.md  v0.6.0-plan.md  v0.7.0-plan.md  v0.8.0-plan.md  v1.0.0-plan.md
packaging/homebrew/: diskpulse.rb
scripts/: verify-linux-ci.mjs  verify-m1-release.mjs  verify-m2-intelligence.mjs  verify-m3-relay.mjs  verify-signing-config.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: performance.rs
src-tauri/src/: fragmentation.rs  lib.rs  main.rs  model_manager.rs
src-tauri/src/aging/: mod.rs
src-tauri/src/alert/: mod.rs
src-tauri/src/anomaly/: ae.rs  features.rs  mod.rs  synthetic.rs
src-tauri/src/cleaner/: mod.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/duplicates/: mod.rs
src-tauri/src/fileclass/: features.rs  magic.rs  mod.rs  model.rs
src-tauri/src/hub/: discovery.rs  mod.rs  pairing.rs  registry.rs  router.rs  server.rs
src-tauri/src/platform/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs  windows_mft.rs
src-tauri/src/prediction/: mod.rs
src-tauri/src/recommendations/: mod.rs
src-tauri/src/relay/: mod.rs
src-tauri/src/report/: mod.rs
src-tauri/src/risk/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/service/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/watcher/: mod.rs
src/components/: AgingAnalysis.tsx  AnomalyCard.tsx  AutoCleanupStatus.tsx  CleanupPreview.tsx  CleanupWizard.tsx  DiskHealthRadar.tsx  DuplicateFinder.tsx  FragmentationView.tsx  Icons.tsx  LargeFileFinder.tsx  NotificationCenter.tsx  PredictionCard.tsx  PredictiveCleanupCard.tsx  RecommendationCard.tsx  RuleEditor.tsx  RuleTester.tsx  ThemeSwitcher.tsx  (+1 more)
(+18 files in other folders)
