[package]
name = "diskpulse"
version = "0.0.1"
description = "Real-time disk space monitor & safe cleanup tool for Windows 11"
authors = ["FJL03"]
edition = "2021"

[lib]
name = "diskpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
anyhow = "1"
windows = { version = "0.58", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_UI_Shell",
] }
