[package]
name = "diskpulse"
version = "0.9.1"
description = "Real-time disk space monitor & safe cleanup tool for Windows 11"
authors = ["FJL03"]
edition = "2021"

[features]
default = ["ml-engine"]
mft-scanner = []
ml-engine = []

[lib]
name = "diskpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
jwalk = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
anyhow = "1"
sha2 = "0.10"
futures-util = "0.3"
mdns-sd = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time"] }
tokio-tungstenite = "0.29"
windows = { version = "0.58", features = [
  "Win32_Storage_FileSystem",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_System_Pipes",
  "Win32_System_Services",
  "Win32_System_Threading",
  "Win32_UI_Shell",
] }

[target.'cfg(target_os = "linux")'.dependencies]
trash = "5"

[target.'cfg(target_os = "macos")'.dependencies]
trash = "5"

[[bench]]
name = "performance"
harness = false
